# ClaudeAgentExamples

./: .gitignore  README.md
AI_DOCS/: 01-SDK-Overview-and-Getting-Started.md  02-API-Reference.md  03-Custom-Tools-and-MCP.md  04-Permissions-and-Security.md  05-Advanced-Topics.md  06-Examples-and-Best-Practices.md  README.md
test_agents/: .env.example  LITELLM_SETUP.md  README.md  conversation_agent.py  custom_tools_agent.py  error_handling_agent.py  file_processor_agent.py  hooks_agent.py  interactive_agent.py  litellm_config.yaml  multi_provider_agent.py  pyproject.toml  run_all_tests.py  simple_query_agent.py  story_writer_openai_agent.py
